@@ -125,6 +125,25 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the opacity of the widget when it is disabled
+        ///
+        /// @param opacity  The opacity of the widget in disabled state.
+        ///                 0 means completely transparent, while 1 (default) means fully opaque.
+        ///                 Set to -1 (default) to use the normal opacity value even when the widget is disabled.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setOpacityDisabled(float opacity);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the opacity of the widget when it is disabled
+        ///
+        /// @return The opacity of the widget in disabled state, or -1 when using the not using a different opacity when
+        ///         the widget is enabled or disabled.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        float getOpacityDisabled() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Changes the font used for the text in the widget
         ///
         /// @param font  The new font
