@@ -561,6 +561,10 @@ namespace tgui
             m_mouseDown = false;
             setFocused(false);
         }
+
+        // Refresh widget opacity if there is a different value set for enabled and disabled widgets
+        if (getSharedRenderer()->getOpacityDisabled() != -1)
+            rendererChanged("opacitydisabled");
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -827,9 +831,12 @@ namespace tgui
 
     void Widget::rendererChanged(const std::string& property)
     {
-        if (property == "opacity")
+        if ((property == "opacity") || (property == "opacitydisabled"))
         {
-            m_opacityCached = getSharedRenderer()->getOpacity() * m_inheritedOpacity;
+            if (!m_enabled && (getSharedRenderer()->getOpacityDisabled() != -1))
+                m_opacityCached = getSharedRenderer()->getOpacityDisabled() * m_inheritedOpacity;
+            else
+                m_opacityCached = getSharedRenderer()->getOpacity() * m_inheritedOpacity;
         }
         else if (property == "font")
         {
