@@ -343,7 +343,7 @@ namespace tgui
         {
             m_fillColorCached = getSharedRenderer()->getFillColor();
         }
-        else if (property == "opacity")
+        else if ((property == "opacity") || (property == "opacitydisabled"))
         {
             Widget::rendererChanged(property);
 
