@@ -422,7 +422,7 @@ namespace tgui
         {
             m_textDistanceRatioCached = getSharedRenderer()->getTextDistanceRatio();
         }
-        else if (property == "opacity")
+        else if ((property == "opacity") || (property == "opacitydisabled"))
         {
             Widget::rendererChanged(property);
 
